<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_recipe"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="uottawa.ca.cookhelper.RecipeActivity">



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="end">

            <Button
                android:text="@string/okBtnTxt"
                android:layout_height="wrap_content"
                android:id="@+id/okBtn"
                android:layout_width="wrap_content"
                android:layout_gravity="end"
                android:onClick="okButtonAction"
                android:visibility="invisible" />

            <Button
                android:text="@string/cancelBtnTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cancelBtn"
                android:layout_gravity="end"
                android:visibility="invisible"
                android:onClick="cancelButtonAction" />

            <Button
                android:text="@string/editRecipeTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editRecipeBtn"
                android:onClick="editButtonAction"
                android:layout_gravity="end" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:shrinkColumns="1">

                    <!-- ************************ Name ************************ -->

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/nameLabel"
                            android:text="Name: "
                            android:textStyle="bold"
                            android:textAppearance="@android:style/TextAppearance"
                            android:layout_column="0" />
                        <uottawa.ca.cookhelper.CustomEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/nameView"
                            android:inputType="none"
                            android:textAppearance="@android:style/TextAppearance"
                            android:layout_column="1"
                            android:paddingLeft="5sp"
                            android:gravity="center_vertical|start"
                            android:hint="name" />
                    </TableRow>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#000000" />

                    <!-- ************************ Country ************************ -->
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                        <TextView
                            android:text="Country: "
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/countryLabel"
                            android:layout_column="0"
                            android:textStyle="bold"
                            android:textAppearance="@android:style/TextAppearance"/>

                        <uottawa.ca.cookhelper.CustomEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/countryView"
                            android:inputType="none"
                            android:textAppearance="@android:style/TextAppearance"
                            android:layout_column="1"
                            android:paddingLeft="5sp"
                            android:hint="country"/>
                    </TableRow>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#000000" />

                    <!-- ************************ Category ************************ -->
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                        <TextView
                            android:text="Category: "
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/categoryLabel"
                            android:layout_column="0"
                            android:textStyle="bold"
                            android:textAppearance="@android:style/TextAppearance"/>

                        <uottawa.ca.cookhelper.CustomEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/categoryView"
                            android:inputType="none"
                            android:textAppearance="@android:style/TextAppearance"
                            android:layout_column="1"
                            android:paddingLeft="5sp"
                            android:hint="category"/>

                    </TableRow>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#000000" />

                    <!-- ************************ Cooking Time ************************ -->
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                        <TextView
                            android:text="Time (min): "
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/cookTimeLabel"
                            android:layout_column="0"
                            android:textStyle="bold"
                            android:textAppearance="@android:style/TextAppearance" />

                        <uottawa.ca.cookhelper.CustomEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/cookTimeView"
                            android:inputType="none"
                            android:textAppearance="@android:style/TextAppearance"
                            android:layout_column="1"
                            android:paddingLeft="5sp" />
                    </TableRow>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#000000" />

                    <!-- ************************ Serving Size ************************ -->
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                        <TextView
                            android:text="Serves: "
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/servingSizeLabel"
                            android:layout_column="0"
                            android:textStyle="bold"
                            android:textAppearance="@android:style/TextAppearance"/>

                        <uottawa.ca.cookhelper.CustomEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/servingSizeView"
                            android:inputType="none"
                            android:textAppearance="@android:style/TextAppearance"
                            android:layout_column="1"
                            android:paddingLeft="5sp" />
                    </TableRow>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#000000" />

                    <!-- ************************ Ingredients ************************ -->
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                        <TextView
                            android:text="Ingredients: "
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/ingredientsLabel"
                            android:layout_column="0"
                            android:textStyle="bold"
                            android:textAppearance="@android:style/TextAppearance"/>

                        <uottawa.ca.cookhelper.CustomEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/ingredientsView"
                            android:inputType="none"
                            android:textAppearance="@android:style/TextAppearance"
                            android:layout_column="1"
                            android:paddingLeft="5sp"
                            android:textColor= "@drawable/edit_text_color"
                            android:hint="1. ingredient\n2. ingredient"
                            />
                    </TableRow>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#000000" />

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                        <TextView
                            android:text="Instructions: "
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/instructionsLabel"
                            android:layout_column="0"
                            android:textStyle="bold"
                            android:textAppearance="@android:style/TextAppearance"/>

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                    </TableRow>

                    <!-- ************************ Instructions ************************ -->


                </TableLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/tableLayout"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true">

                    <uottawa.ca.cookhelper.CustomEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/instructionsView"
                        android:inputType="none"
                        android:textAppearance="@android:style/TextAppearance"
                        android:textColor= "@drawable/edit_text_color"
                        android:hint="1. instruction\n2. instruction"
                        />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</RelativeLayout>
